// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Menu initial closed 1`] = `
<span
  class="css-1vfjj5t-Trigger e195q2qw0"
>
  <button
    class="css-1oxeog4-Button e1xfucyx0"
  >
    Click me
  </button>
</span>
`;

exports[`Storyshots Components|Menu multiple open 1`] = `
Array [
  <span
    class="css-1vfjj5t-Trigger e195q2qw0"
  >
    <button
      class="css-1oxeog4-Button e1xfucyx0"
    >
      Click me
    </button>
  </span>,
  <span
    class="css-1vfjj5t-Trigger e195q2qw0"
  >
    <button
      class="css-1oxeog4-Button e1xfucyx0"
    >
      Click me
    </button>
  </span>,
]
`;

exports[`Storyshots Components|Menu with Items 1`] = `
<span
  class="css-1vfjj5t-Trigger e195q2qw0"
>
  <button
    class="css-1oxeog4-Button e1xfucyx0"
  >
    Click me
  </button>
</span>
`;

exports[`Storyshots Components|Menu with Items that close 1`] = `
<span
  class="css-1vfjj5t-Trigger e195q2qw0"
>
  <button
    class="css-1oxeog4-Button e1xfucyx0"
  >
    Click me
  </button>
</span>
`;

exports[`Storyshots Components|Menu with links 1`] = `
<span
  class="css-1vfjj5t-Trigger e195q2qw0"
>
  <button
    class="css-1oxeog4-Button e1xfucyx0"
  >
    Click me
  </button>
</span>
`;
